# aleo-sdk-node

./: .gitignore  Cargo.toml  README.md  index.d.ts  index.js  main.aleo  package-lock.json  package.json  program.json  test.mjs
.github/workflows/: publish.yml
npm/darwin-arm64/: README.md  package.json
npm/darwin-x64/: README.md  package.json
npm/linux-x64-musl/: README.md  package.json
src/: execute.rs  fee.rs  lib.rs  process.rs
