[package]
edition = "2021"
name = "aleo-sdk-node"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.12.2", default-features = false, features = ["napi6", "async"] }
napi-derive = "2.12.2"
anyhow = "1.0.86"
rand = "0.8.5"
serde = "1.0.209"
serde_json = "1.0.127"
snarkvm = { git = "https://github.com/AleoNet/snarkVM.git", rev = "3d42aa04a058cd5f46a1880b421313e1c04a63dc" }
tokio = { version = "1.1.0", features = ["full"]}
dotenv = "0.15.0"
env_logger = "0.11.5"
log = "0.4.22"

[build-dependencies]
napi-build = "2.0.1"

[profile.dev]
debug-assertions = true

[profile.release]
lto = true
strip = "symbols"
debug-assertions = false
